# coders_school

./: CMakeLists.txt  README.md  Ship.cpp  Ship.h  instructions.txt  instrukcje.txt  main.cpp
Cargo/: Cargo.cpp  Cargo.h
Ship/: Ship.cpp  Ship.h
